[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-25.png" type="Texture" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/red_button1_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-26-re.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-87.png" type="Texture" id=5]
[ext_resource path="res://src/main/match/MenuScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-85.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-27.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-86.png" type="Texture" id=9]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -2.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.9431
margin_right = 1926.0
margin_bottom = 1079.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 588.0
margin_top = 186.0
margin_right = 1327.0
margin_bottom = 892.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 739.0
margin_bottom = 232.0
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
icon = ExtResource( 1 )
flat = true
align = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ReturnButton"]
margin_left = 67.0569
margin_top = 25.0
margin_right = 886.057
margin_bottom = 279.0
rect_scale = Vector2( 0.731247, 0.737729 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 739.0
margin_bottom = 469.0
action_mode = 0
icon = ExtResource( 4 )
flat = true
align = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/SettingsButton"]
margin_left = 217.057
margin_top = 31.0
margin_right = 607.057
margin_bottom = 248.0
rect_scale = Vector2( 0.840106, 0.766108 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 474.0
margin_right = 739.0
margin_bottom = 706.0
action_mode = 0
icon = ExtResource( 8 )
flat = true
align = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Exit"]
margin_left = 234.057
margin_top = 52.0
margin_right = 547.057
margin_bottom = 216.0
rect_scale = Vector2( 0.852075, 0.830897 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
